[gd_scene load_steps=2 format=3 uid="uid://cmfk48xxv0ha4"]

[ext_resource type="Script" uid="uid://b4p4i336nms0c" path="res://Scripts/endscreen.gd" id="1_1nkry"]

[node name="Endscreen" type="Node2D"]
script = ExtResource("1_1nkry")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 274.0
offset_top = 160.0
offset_right = 833.0
offset_bottom = 241.0

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sehr Gut, du hast den Fall abgeschlossen."
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "In diesem Fall hast du etwas über \"Thema\" gelernt"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 166.0
offset_top = 292.0
offset_right = 966.0
offset_bottom = 517.0

[node name="FirstGame" type="Sprite2D" parent="HBoxContainer"]
unique_name_in_owner = true
centered = false

[node name="SecondGame" type="Sprite2D" parent="HBoxContainer"]
unique_name_in_owner = true
position = Vector2(404, 0)
centered = false

[node name="Button" type="Button" parent="."]
offset_left = 501.0
offset_top = 564.0
offset_right = 643.0
offset_bottom = 604.0
text = "Zurück ins Büro"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
